# telegram-exception-alerts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test_and_deploy.yml
telegram_exception_alerts/: __init__.py  alerter.py
tests/: conftest.py  test_telegram_exception_alerts.py
